@@ -46,3 +46,8 @@ Starting with _version 1.3.5_, a new `AfterRollbackProcessor` strategy is provid
 
 Support for configuring Kerberos is now provided.
 See <<kerberos>> for more information.
+
+==== Transactional Id
+
+When a transaction is started by the listener container, the `transactional.id` is now the `transactionIdPrefix` appended with `<group.id>.<topic>.<partition>`.
+This is to allow proper fencing of zombies https://www.confluent.io/blog/transactions-apache-kafka/[as described here].
